feat: enhance badge component and editor with new display value handling, improved event management, and additional protocol parameters